1. wip: API spec changes for events API.
This commit will contain all API spec changes necessary for the event buffer feature.
As well as regenerated API definitions.

TODO:
* Why is there so many random comment changes when I regenerate API?
* Go through this again to make sure this API makes sense.
* May want to tune the 'caller' stuff a bit, or drop if it doesn't make sense.
